<resources>
    <string name="app_name">Unibook</string>
    <string name="termos">Clicando em continuar, você concorda com nossos <b>Termos de Serviço</b> e <b>Políticas de Privacidade</b></string>
    <string name="cadastre_se">Não tem uma conta? Cadastre-se</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="continuar">Continuar</string>
    <string name="bem_vindo">Bem-vindo ao Unibook!</string>
    <string name="login">Faça o Login</string>
    <string name="insira_o_e_mail">Insira o E-mail</string>
    <string name="insira_a_senha">Insira a senha</string>
    <string name="crie_uma_conta">Criar uma conta</string>

    <!-- Administração -->
    <string name="title_administracao">Administração</string>
    <string name="label_painel_controle">Painel de Controle</string>
    <string name="btn_gerenciar_livros">Gerenciar Livros</string>
    <string name="btn_procurar_usuarios">Procurar Usuários</string>
    <string name="btn_verificar_multas">Verificar Multas</string>
    <string name="btn_configuracoes">Configurações</string>
    <string name="title_multas">Multas</string>
    <string name="title_procurar_usuarios">Procurar Usuários</string>
    <string name="title_procurar_livros">Procurar Livros</string>
    <string name="hint_busca">Faça Sua Busca</string>
    <string name="hint_busca_multas">Buscar por livro ou data</string>

    <!-- Diálogos -->
    <string name="msg_confirmar_exclusao">Tem certeza que deseja Excluir?</string>
    <string name="msg_acao_usuario">Qual ação deseja fazer :</string>
    <string name="btn_visualizar_perfil">Visualizar Perfil</string>
    <string name="btn_excluir_perfil">Excluir Perfil</string>
    <string name="btn_criar_pequeno">Criar</string>
    <string name="btn_procurar_pequeno">Procurar</string>
    <string name="title_escolha_prosseguir">Escolha como deseja prosseguir:</string>
    <string name="msg_pergunta_livro">O que deseja fazer com este livro?</string>
    <string name="btn_emprestimo">Empréstimo</string>
    <string name="title_gerenciar_livros">Gerenciar Livros</string>
    <string name="msg_termos_livro">Para realizar o empréstimo, você deve aceitar os termos de uso da biblioteca.</string>
    <string name="label_aceito_termos">Eu aceito os termos</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="title_termos_servico">Termos de Serviço</string>

    <!-- Livros (Criar/Editar) -->
    <string name="title_criar_livros">Criar Livros</string>
    <string name="title_editar">Editar</string>
    <string name="label_capa_livro">Capa do Livro</string>
    <string name="label_nome">Nome :</string>
    <string name="label_autor">Autor :</string>
    <string name="label_genero">Gênero :</string>
    <string name="btn_alterar_foto">Alterar foto</string>
    <string name="label_sinopse">Sinopse</string>
    <string name="btn_criar">Criar</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_excluir">Excluir</string>
    <string name="placeholder_capa_livro">Capa do Livro 1</string>

    <!-- Perfil e Usuário -->
    <string name="btn_sair_conta">Sair da Conta</string>
    <string name="btn_editar_perfil">Editar Perfil</string>
    <string name="label_nome_usuario">Nome do Usuário :</string>
    <string name="label_email">E-mail :</string>
    <string name="label_livros_emprestimo">Livros em Empréstimo :</string>
    <string name="label_devolver_em">Devolver em: %1$s</string>
    <string name="label_tempo_restante">Tempo restante: %1$d dias</string>
    <string name="status_atrasado">Atrasado!</string>
    <string name="livro_desconhecido">Livro Desconhecido</string>
    <string name="btn_livros_favoritos">Livros favoritos</string>
    <string name="btn_historico_livros">Histórico de Livros</string>

    <!-- Atraso -->
    <string name="title_livro_atraso">Livro em Atraso</string>
    <string name="label_devolucao_prevista">Devolução Prevista:</string>
    <string name="label_dias_atraso">Dias em Atraso :</string>
    <string name="label_multa_atual">Multa Atual :</string>
    <string name="label_status">Status :</string>
    <string name="msg_regularize_pagamento">Regularize o pagamento para continuar utilizando o sistema</string>
    <string name="btn_gerar_qrcode">Gerar QrCode para Pagamento</string>

    <!-- Navegação -->
    <string name="nav_inicio">Início</string>
    <string name="nav_biblioteca">Biblioteca</string>
    <string name="nav_chatbot">CHATBOT</string>
    <string name="nav_buscar">Buscar</string>
    <string name="nav_perfil">Perfil</string>
    <string name="logo_unibook">UNIBOOK</string>
    <string name="label_voce">VOCÊ</string>
    <string name="label_unibook_bot">UNIBOOK BOT</string>
    <string name="hint_pergunte_chatbot">Pergunte sobre algum livro</string>
    <string name="msg_exemplo_usuario">Certo, quero um livro sobre culinária!</string>
    <string name="msg_exemplo_bot">Certo! Aqui vai um dos resultados para livros sobre culinária!</string>
    <string name="desc_botao_enviar">Enviar mensagem</string>

    <!-- Erros -->
    <string name="err_busca_vazia">O campo de busca não pode estar vazio!</string>
    <string name="err_salvar_dados">Erro ao salvar os dados. Tente novamente.</string>
    <string name="err_email_cadastrado">O email inserido já está cadastrado</string>
    <string name="err_servidor">Erro de conexão com o servidor. Verifique sua internet.</string>
    <string name="err_campos_vazios">Preencha todos os campos</string>
    <string name="err_email_invalido">Por favor, insira um e-mail válido</string>
    <string name="err_admin_senha">Senha administrativa incorreta.</string>
    <string name="err_login_incorreto">Email ou senha incorretos</string>
    <string name="err_senha_incorreta">Senha incorreta.</string>
    <string name="err_usuario_nao_cadastrado">Usuário não cadastrado.</string>

    <!-- Mensagens -->
    <string name="msg_cadastro_sucesso">Cadastro realizado com sucesso!</string>

    <!-- Gerais -->
    <string name="voltar">Voltar</string>

    <!-- Home Categorias -->
    <string name="home_saudacao">Para %1$s</string>
    <string name="home_cat_aclamados">Livros sugeridos</string>
    <string name="home_cat_educacao">Educação e Tecnologia</string>
    <string name="home_cat_minha_lista">Minha lista</string>
    <string name="home_ver_tudo">Ver tudo ></string>
    <string name="home_cat_comedias">Comédias</string>
    <string name="home_cat_suspense">Suspense e Mistério</string>
    <string name="home_cat_ficcao">Ficção Científica</string>
    <string name="home_cat_terror">Terror e Horror</string>
    <string name="home_cat_romance">Romance</string>
    <string name="home_cat_aventura">Ação e Aventura</string>
    <string name="home_cat_documentarios">Documentários</string>
    <string name="home_cat_animes">Animes</string>
    <string name="home_cat_classicos">Clássicos da Literatura</string>
    <string name="home_cat_fantasia">Fantasia</string>
    <string name="home_lista_vazia">Nenhum livro encontrado</string>
    <string name="desc_alternar_tema">Alternar entre modo claro e escuro</string>
    <string name="title_detalhes">Detalhes</string>
    <string name="btn_baixar">Baixar</string>
    <string name="btn_favoritar">Favoritar</string>
    <string name="btn_emprestimo_v2">Alugar/Empréstimo</string>
    <string name="label_genero_v2">Gênero: %1$s</string>
    <string name="label_autor_v2">Autor: %1$s</string>
    <string name="desc_capa_livro">Capa do Livro</string>
    <string name="hint_nome_completo">Nome completo</string>
    <string name="hint_email_exemplo">email@domain.com</string>
    <string name="hint_crie_senha">Crie uma senha</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="msg_ja_tem_conta">Já possui uma conta? Faça o login</string>
    <string name="title_visualizar_perfil">Visualizar Perfil</string>
    <string name="label_livro_emprestimo">Livro em Empréstimo</string>
    <string name="label_status_v2">Status:</string>
    <string name="label_data_entrega">Data de Entrega:</string>
    <string name="label_data_devolucao">Data de Devolução:</string>
    <string name="btn_aceitar_termos_v2">Aceitar os Termos de Serviços</string>
    <string name="btn_verificar_multa">Verificar Multa</string>
    <string name="title_informacoes_conta">Informações da Conta</string>
    <string name="title_emprestimo_ativo">Empréstimo Ativo</string>
    <string name="title_atividade_ajustes">Atividade e Ajustes</string>
    <string name="label_historico_leitura">Histórico de Leitura</string>
    <string name="placeholder_email">email@exemplo.com</string>
    <string name="placeholder_nome_usuario">Nome do Usuário</string>
    <string name="placeholder_livro_nome">O Senhor dos Anéis</string>
    <string name="placeholder_status_emprestimo">Em andamento</string>
    <string name="msg_sem_emprestimos">Nenhum livro em empréstimo encontrado.</string>
    <string name="hint_digite_nome">Digite seu nome</string>
    <string name="hint_digite_email">Digite seu e-mail</string>
    <string name="title_redefinir_senha">Redefinir Senha</string>
    <string name="title_recuperar_senha">Recuperar Senha</string>
    <string name="title_verificar_codigo">Verificar Código</string>
    <string name="title_pagamento_pix">Pagamento via Pix</string>
    <string name="msg_codigo_enviado">O código foi enviado para o seu e-mail.</string>
    <string name="hint_insira_codigo">Insira o Código</string>
    <string name="btn_enviar">Enviar</string>
    <string name="txt_reenviar_codigo">Reenviar o código</string>
    <string name="label_insira_nova_senha">Insira uma nova senha:</string>
    <string name="hint_nova_senha">Nova senha</string>
    <string name="hint_confirmar_senha">Confirme a nova senha</string>
    <string name="btn_redefinir">Redefinir senha</string>
    <string name="label_informe_email">Informe seu e-mail</string>
    <string name="btn_solicitar">Solicitar</string>
    <string name="btn_copiar_codigo">Copiar Código</string>
    <string name="label_copie_cole">Código do copie e cole</string>
    <string name="label_valor_multa_v2">Valor da Multa :</string>
    <string name="label_status_pagamento">Status :</string>
    <string name="msg_instrucao_pagamento">Após realizar o pagamento,\nenvie o comprovante via imagem.</string>
    <string name="msg_requisitos_senha">A senha deve ter pelo menos 8 caracteres, incluindo um número e uma letra maiuscula</string>
    <string name="msg_erro_email_inexistente">O email inserido não existe</string>
    <string name="btn_enviar_comprovante">Enviar Comprovante</string>
    <string name="label_valor">Valor</string>
    <string name="placeholder_valor_multa">R$ 0,00</string>
    <string name="placeholder_status_pendente">Pendente</string>
    <string name="editar_livros">Editar Livros</string>
    <string name="err_aceitar_termos">Por favor, aceite os termos para continuar.</string>
    <string name="btn_ver_detalhes_livro">Ver Detalhes do Livro</string>
</resources>
